--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+.Ds_Store
+# 実際にコミットを行う前に、不要な変更履歴がGitで管理されないようにしましょう。
+# ここでいう不要な変更履歴とは、.DS_Storeという隠しファイルのことです。このファイルはディレクトリの情報を記録するファイルです。度々生成されるものですが、このファイルをGitで管理することによって、今後必要のない作業が増えてしまう可能性があります。ここで設定を行って、今後は.DS_StoreをGitで管理しないようにしましょう。
